src/objects/Competency_Model__c.object
<CustomObject>
    <fields>
        <fullName>Competency_Area__c</fullName>
        <label>Competency Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competency_Model__c</fullName>
        <label>Competency Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competency__c</fullName>
        <label>Competency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Competency Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Competency_Model__c</columns>
        <columns>Competency_Area__c</columns>
        <columns>Competency__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FAC_COR_Competency_Model</fullName>
        <columns>NAME</columns>
        <columns>Competency_Model__c</columns>
        <columns>Competency_Area__c</columns>
        <columns>Competency__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Competency_Model__c</field>
            <operation>equals</operation>
            <value>FAC-COR</value>
        </filters>
        <label>FAC-COR Competency Model</label>
    </listViews>
    <listViews>
        <fullName>IDP_ECQ_Leadership</fullName>
        <columns>NAME</columns>
        <columns>Competency_Model__c</columns>
        <columns>Competency_Area__c</columns>
        <columns>Competency__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Competency_Model__c</field>
            <operation>equals</operation>
            <value>ECQs (Leadership)</value>
        </filters>
        <label>IDP - ECQ (Leadership)</label>
    </listViews>
    <listViews>
        <fullName>IDP_FAC_C_Contracting</fullName>
        <columns>NAME</columns>
        <columns>Competency_Model__c</columns>
        <columns>Competency_Area__c</columns>
        <columns>Competency__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Competency_Model__c</field>
            <operation>contains</operation>
            <value>FAC-C Contracting</value>
        </filters>
        <label>IDP - FAC-C Contracting</label>
    </listViews>
    <listViews>
        <fullName>IDP_FAC_PPM_IT_Core_Plus</fullName>
        <columns>NAME</columns>
        <columns>Competency_Model__c</columns>
        <columns>Competency_Area__c</columns>
        <columns>Competency__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Competency_Model__c</field>
            <operation>equals</operation>
            <value>FAC-P/PM – Information Technology (IT) Core-Plus</value>
        </filters>
        <label>IDP - FAC-P/PM - IT Core-Plus</label>
    </listViews>
    <listViews>
        <fullName>IDP_Federal_Buildings_Personnel</fullName>
        <columns>NAME</columns>
        <columns>Competency_Model__c</columns>
        <columns>Competency_Area__c</columns>
        <columns>Competency__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Competency_Model__c</field>
            <operation>equals</operation>
            <value>Federal Buildings Personnel Training Act - 2013 Core Competencies</value>
        </filters>
        <label>IDP - Federal Buildings Personnel</label>
    </listViews>
    <listViews>
        <fullName>IDP_HR_Specialist</fullName>
        <columns>NAME</columns>
        <columns>Competency_Model__c</columns>
        <columns>Competency_Area__c</columns>
        <columns>Competency__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Competency_Model__c</field>
            <operation>equals</operation>
            <value>Human Resources Specialist</value>
        </filters>
        <label>IDP - HR Specialist</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Competency Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competency Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>